name:                workbench-upload
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/workbench-upload#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable workbench-upload
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, text, ilist, mtl, prettyprinter
  default-extensions:  DuplicateRecordFields, NamedFieldPuns, OverloadedStrings, RankNTypes
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
