name:                workbench-upload
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/workbench-uploader#readme
license:             GPL-3
license-file:        LICENSE
author:              Specify Software Consortium
maintainer:          anhalt@ku.edu
copyright:           2019 Specify Software Consortium
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable workbench-upload
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions:
                     DuplicateRecordFields,
                     NamedFieldPuns,
                     OverloadedStrings,
                     RankNTypes,
                     DeriveGeneric,
                     GeneralizedNewtypeDeriving,
                     ScopedTypeVariables
  build-depends:
                base >= 4.7 && < 5,
                text,
                ilist,
                mtl,
                prettyprinter,
                newtype-generics,
                pcre-light,
                aeson,
                aeson-pretty,
                bytestring,
                mysql-simple
  other-modules:
                AugmentPlan
                Common
                ExamplePlan
                MatchExistingRecords
                MatchRecords
                SQL
                SQLKeyword
                SQLRender
                SQLSmart
                Upload
                UploadPlan
